kubeTM/ingress/CanaryUpgrade/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: www.app.com
    http:
      paths:
      - backend:
          serviceName: svc-v1
          servicePort: 8080
# Centos HostName 등록
# cat << EOF >> /etc/hosts
# 192.168.0.30 www.app.com
# EOF

# curl www.app.com:30431/version
